# practical-network-apps-rust

./: .gitlab-ci.yml  README.md
.github/workflows/: rust.yml
example-cli/: Cargo.toml
example-cli/src/: cli.yaml  main.rs
kvs/: Cargo.toml
kvs/src/: lib.rs
kvs/tests/: tests.rs
largest/: Cargo.toml
largest/src/: main.rs
pingpong-std/: Cargo.toml
project1-kvs/: Cargo.toml
project1-kvs/src/: lib.rs
serde-sunday/: Cargo.toml
serde-sunday/src/: lib.rs
serde_resp/: Cargo.toml
serde_resp/src/: parser.rs
web-server/: Cargo.toml
web-server/src/: main.rs
