[package]
name = "example-cli"
version = "0.1.0"
authors = ["Tim Deeb-Swihart <tim@deebswih.art>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.0-beta.1", features = ["yaml"] }
dotenv = "0.15.0"
