[package]
name = "kvs"
description = "a key-value store"
version = "0.1.0"
authors = ["Tim Deeb-Swihart <tim@deebswih.art>"]
edition = "2018"

[dependencies]
structopt = "0.3"
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15.0"
anyhow = "1.0.32"
human-panic = "1.0.3"
log = "0.4.0"
env_logger = "0.7.1"
snafu = "0.6.8"
bson = "1.0.0"

[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
tempfile = "3.0.7"
walkdir = "2.2.7"

[lib]

[[bin]]
name = "kvs"
test = false
