[package]
name = "pingpong-std"
version = "0.1.0"
authors = ["Tim Deeb-Swihart <tim@deebswih.art>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "pingpong-stdserver"
path = "src/bin/server.rs"

[[bin]]
name = "pingpong-stdclient"
path = "src/bin/client.rs"

[dependencies]

