[package]
name = "serde_sunday"
version = "0.1.0"
authors = ["Tim Deeb-Swihart <tim@deebswih.art>"]
edition = "2018"

[dependencies]
structopt = "0.3"
anyhow = "1.0.32"
human-panic = "1.0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.7"
ron = "0.6.0"
bson = "1.0"
